# school-projects

chess/: AUTHORS  Makefile  TODO  configure
chess/bonus/: Makefile  aste_1.tga  black_bishop.tga  black_king.tga  black_knight.tga  black_pawn.tga  black_queen.tga  black_rook.tga  draw.cc  draw.hh  init_sdl.cc  init_sdl.hh  listener_3d.cc  listener_3d.hh  main.c  mainloop.c  mainloop.h  textures.cc  textures.hh  white_bishop.tga  white_king.tga  white_knight.tga  white_pawn.tga  white_queen.tga  white_rook.tga
chess/check/: Karpov25.pgn  rock1.pgn  rock2.pgn  test01.pgn  test10.pgn  test11.pgn  test12.pgn  test13.pgn  test14.pgn  test15.pgn  test16.pgn  test17.pgn  test18.pgn  test19.pgn  test2.pgn  test20.pgn  test3.pgn  test4.pgn  test5.pgn  test6.pgn  test7.pgn  test8.pgn  test9.pgn  test_06.pgn  test_07.pgn  test_08.pgn  test_100.pgn  test_101.pgn  test_102.pgn  test_103.pgn  test_104.pgn  test_105.pgn  test_106.pgn  test_107.pgn  test_108.pgn  test_109.pgn  test_11.pgn  test_110.pgn  test_111.pgn  test_12.pgn  (+85 more)
chess/doc/: Doxyfile
chess/src/: CMakeLists.txt  Makefile  game.cc
chess/src/board/: board.cc  board.hh  chessboard-adapter.cc  chessboard-adapter.hh
chess/src/error/: error.cc  error.hh  move_error.cc  move_error.hh
chess/src/libai/: CMakeLists.txt  ai-dummy.cc  ai-dummy.hh  ai.hxx  color.hh  listener.cc  listener.hh  move.hxx  myai.cc  myai.hh  piece-type.hh  player.cc  position.cc  position.hxx
chess/src/listener/: listener.hh  loaderlistener.cc  loadlistener.hh  use_listener.cc  use_listener.hh
chess/src/misc/: move.cc  move.hh  position.hh  position.hxx
chess/src/parser/: chessdriver.cc  chessdriver.hh  movepgn.cc  movepgn.hh  parsechess.yy  scanchess.ll
chess/src/pieces/: bishop.cc  bishop.hh  king.cc  king.hh  knight.cc  knight.hh  pawn.cc  pawn.hh  piece.cc  piece.hh  piece_get_list_visitor.cc  piece_get_list_visitor.hh  piece_move_visitor.cc  piece_move_visitor.hh  piece_print_visitor.cc  piece_print_visitor.hh  piece_visitor.hh  queen.cc  queen.hh  rook.cc  rook.hh
chess/src/player/: player.hh
chess/src/player/ai/: ai-dummy.cc  ai-dummy.hh  ai.cc  ai.hh
corewar/: AUTHORS  Makefile  README  TODO  configure  data.h
corewar/bonus/: draw.c  draw.h  init_sdl.c  init_sdl.h  mainloop.c  mainloop.h
corewar/check/: codejava.js  diff.sh  mkfile.sh  test.pl
corewar/src/: CMakeLists.txt
corewar/src/pit/: ast.hh  eval_boost.cc  labels.cc  labels.hh  main.cc  parser.cc  parser.hh  token.cc  token.hh
corewar/src/pit/asts/: add.cc  add.hh  addi.cc  addi.hh  and.cc  and.hh  asr.cc  asr.hh  b.cc  b.hh  bnz.cc  bnz.hh  bs.cc  bs.hh  bz.cc  bz.hh  check.cc  check.hh  cmp.cc  cmp.hh  cmpi.cc  cmpi.hh  crash.cc  crash.hh  div.cc  div.hh  fork.cc  fork.hh  lc.cc  lc.hh  ldb.cc  ldb.hh  ldr.cc  ldr.hh  ll.cc  ll.hh  minus.cc  minus.hh  mode.cc  mode.hh  (+34 more)
corewar/src/pit/error/: exeption.cc  exeption.hh
corewar/src/pit/visitor/: ast-print.cc  ast-print.hh  evaluator.cc  evaluator.hh  visitor.hh  writter.cc  writter.hh
corewar/src/track/: buffer.hh  debug.cc  debug.hh  delays.cc  delays.hh  fetchqueue.cc  fetchqueue.hh  file_loader.cc  file_loader.hh  main.cc  parse_opt.cc  parse_opt.hh  quartet.cc  quartet.hh
corewar/src/track/instr/: add_track.cc  add_track.hh  addi_track.cc  addi_track.hh  and_track.cc  and_track.hh  asr_track.cc  asr_track.hh  b_track.cc  b_track.hh  bnz_track.cc  bnz_track.hh  bs_track.cc  bs_track.hh  bz_track.cc  bz_track.hh  check_track.cc  check_track.hh  cmp_track.cc  cmp_track.hh  cmpi_track.cc  cmpi_track.hh  crash_track.cc  crash_track.hh  instr.cc  instr.hh  lc_track.cc  lc_track.hh  ldb_track.cc  ldb_track.hh  ll_track.cc  ll_track.hh  mode_track.cc  mode_track.hh  mov_track.cc  mov_track.hh  neg_track.cc  neg_track.hh  nop_track.cc  nop_track.hh  (+18 more)
corewar/src/track/processor/: processor_phantom.cc  processor_phantom.hh  processor_rapier.cc  processor_rapier.hh  processor_vector.cc  processor_vector.hh  processor_venom.cc  processor_venom.hh
corewar/src/track/track/: track_phantom.cc  track_phantom.hh  track_rapier.cc  track_rapier.hh  track_vector.cc  track_vector.hh  track_venom.cc  track_venom.hh
game-of-life/: AUTHORS  Makefile  README  TODO  configure
game-of-life/check/: moulinette.sh  test.pl  test_ref
game-of-life/doc/: Doxyfile
game-of-life/src/: CMakeLists.txt  game.cc  game.hh  main.cc  map.cc  map.hh  team.cc  team.hh
game-of-life/src/ants/: ant.cc  ant.hh  fighter.cc  fighter.hh  foodworker.cc  foodworker.hh  killableant.cc  killableant.hh  queen.cc  queen.hh  waterworker.cc  waterworker.hh
game-of-life/src/cells/: cell.cc  cell.hh  ground.cc  ground.hh  obstacle.hh  resource.cc  resource.hh  scenery.cc  scenery.hh
game-of-life/src/cells/obstacles/: stone.hh
game-of-life/src/cells/pheromones/: fighterpheromone.cc  fighterpheromone.hh  foodpheromone.cc  foodpheromone.hh  pheromone.cc  pheromone.hh  queenpheromone.cc  queenpheromone.hh  waterpheromone.cc  waterpheromone.hh
game-of-life/src/cells/resources/: foodresource.hh  waterresource.hh
game-of-life/src/display/: ascii.cc  ascii.hh  display.cc  display.hh
game-of-life/src/error/: maperror.cc  maperror.hh  opterror.cc  opterror.hh
game-of-life/src/loader/: maploader.cc  maploader.hh
game-of-life/src/random/: random.cc  random.hh
game-of-life/src/rules/: rules.cc  rules.hh  standardrules.cc  standardrules.hh
malloc/: ChangeLog  Doxyfile  Makefile  README  TODO  deps.mk
malloc/check/: Makefile  main.c  test.sh
malloc/src/: Makefile  calloc.c  free.c  malloc.c  malloc.h  realloc.c  utils.c  utils.h
minishell/: ChangeLog  Doxyfile  Makefile  README  TODO  deps.mk
minishell/check/: moulinette.sh
minishell/src/: Makefile  builtin.c  builtin.h  defines.h  lib_string.c  lib_string.h  libstream.h  minishell.c  parse_cmd.c  parse_cmd.h  utils.c  utils.h  utils_app.c  utils_app.h  utils_builtin.c  utils_builtin.h  utils_redir.c  utils_redir.h  utils_str.c  utils_str.h
my-ftp/: AUTHORS  ChangeLog  Makefile  README  TODO  configure
rush/: AUTHORS  ChangeLog  Makefile  README  TODO  configure  makefile.rules
(+355 files in other folders)
